# palaeoPSM

./: LICENSE  README.md  data_read.py  environment.yml  pyproject.toml  requirements.txt
notebooks/: test_briquettes.ipynb
palaeoPSM/: psm_read.py  psm_to_long.py
test/: test_briquettes.ipynb
test_data/: contams.fasta  n_scans.csv  test_db.fasta
test_data/benchmarking_data_st_db1/N0000/: psm.tsv
test_data/benchmarking_data_st_db1/N0040/: interact.pep.xml  psm.tsv
test_data/benchmarking_data_st_db1/N1280/: psm.tsv
test_data/milk_st_db1/milk_1A/: interact.pep.xml
test_data/milk_st_db1/milk_1B/: interact.pep.xml
test_data/milk_st_db1/milk_2A/: interact.pep.xml
test_data/milk_st_db1/milk_2B/: interact.pep.xml
