[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palaeoPSM"
version = "0.0.1"
authors = [
  { name="Ismael Rodriguez", email="ismael@palaeome.org" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26.1",
  "pyteomics>=4.6.2",
  "lxml>=4.9.3",
  "biopython>=1.78",
  "jupyter",
  "dill"
]
[project.urls]
Homepage = "https://github.com/ismaRP/palaeoPSM.git"
Issues = "https://github.com/ismaRP/palaeoPSM/issues"

[tool.setuptools]
packages = ["palaeoPSM"]
py-modules = ["__init__"]
